--- a/_includes/news.html
+++ b/_includes/news.html
@@ -114,45 +114,62 @@
 <p><strong>Datas importantes da 5ª Fase:</strong></p>
 <p>Participação dos quatro alunos selecionados (5º ao 8º melhores classificados nacionais na XV OBB 2019) na XIII OIAB, em Cochabamba na Bolívia, data a confirmar.</p>
 <p> </p></div>
-</li><li class="rss-item"><a href="http://olimpiadasdebiologia.butantan.gov.br/inscricoes-e-regulamentos" class="rss-item">Inscrições</a> <span class="rss-item-auth"></span><br><span class="rss-date"></span><br><div><p>Observação: Caro professor, antes de realizar a inscrição LEIA ATENTAMENTE o regulamento abaixo:</p>
-<p>As inscrições serão realizadas por um professor responsável de cada escola, gratuitamente, no próprio site da OBB, com INÍCIO no dia 04 de FEVEREIRO de 2019 e TÉRMINO no dia 21 de MARÇO de 2019. </p>
-<p><strong><span>IMPORTANTE:</span></strong></p>
-<p>Cada professor cadastrado deverá acessar a página da OBB, a partir do dia 19/03/2019, para o download da prova, e somente os professores cadastrados poderão fazê-lo mediante sua senha pessoal (recebida no momento da inscrição). </p>
-<p>Quanto à participação: </p>
-<p>Poderá participar da XV Olimpíada Brasileira de Biologia (OBB) e na XXX Olimpíada Internacional de Biologia (IBO) e XIII Ibero-Americana de Biologia (OIAB), caso seja classificado, o aluno regularmente matriculado e cursando o ensino médio até dezembro de 2019 em qualquer escola pública ou privada, cadastradas pelo MEC. </p>
-<p>Por determinação da Olimpíada Internacional de Biologia, a idade máxima de participação dos alunos na OBB é de 19 anos (inclusive) no dia 1 de julho de 2019. </p>
-<p>Por critério da Olimpíada Ibero-Americana de Biologia, alunos que já tenham participado da IBO não poderão participar da OIAB. Caso haja esta situação, o suplente melhor classificado será convocado para substituí-lo. </p>
-<p>Os melhores alunos classificados pela OBB poderão participar uma única vez da OIAB e até duas vezes, participando dos respectivos processos seletivos da OBB, da IBO.</p>
-<p>Quanto ao número de questões, impressão e distribuição no local da prova:</p>
-<p><span><strong>1ª Fase:</strong></span></p>
-<p>Prova composta por 30 testes de múltipla-escolha abordando todo o conteúdo de biologia contido no link (conteúdo programático) do site da OBB.</p>
-<p>A escola será responsável pela realização das cópias das provas, bem como pela aplicação das mesmas.</p>
-<p><span><strong>2ª Fase:</strong></span></p>
-<p>Prova composta por 100 testes de múltipla-escolha, abordando o mesmo conteúdo programático da 1ª Fase.</p>
-<p>As escolas sede (a definir) serão as responsáveis pela realização das cópias das provas da 2ª Fase, bem como pela aplicação das mesmas.</p>
-<p>A coordenação nacional será a responsável pela distribuição da prova e das folhas de respostas para as escolas sede, via site da OBB, conforme tutorial que será enviado para os professores responsáveis de cada escola. </p>
-<p>A correção será realizada automaticamente pela equipe do Instituto Butantan. </p>
-<p><span><strong>3ª Fase:</strong></span></p>
-<p>Os alunos classificados para a 3ª fase serão capacitados via atividades práticas por uma equipe composta por pesquisadores e educadores do Instituto Butantan. </p>
-<p>Após a capacitação, os alunos farão uma prova teórico/prática composta por questões de múltipla-escolha elaborada pela equipe Butantan, onde cada questão apresentará 4 proposições que deverão ser classificadas como Verdadeiras ou Falsas. Onde: 0 ou 1 correta = 0 ponto; 2 corretas = 0,2 pontos; 3 corretas = 0,6 pontos e 4 corretas = 1 ponto. Esta prova corresponderá aos outros 50% da nota final da 3a Fase.</p>
-<p>Qualquer suspeita de aplicação das provas da 1ª Fase ou da 2ª Fase fora da data e horário ou em locais não autorizados pela coordenação da OBB determinará em eliminação dos alunos da XIV Olimpíada Brasileira de Biologia.</p>
-<p>Quanto a classificação:</p>
-<p><span><strong>1ª Fase:</strong></span></p>
-<p>O caráter dessa prova será classificatório para a 2ª Fase e SOMENTE PODERÃO PARTICIPAR DA 2ª FASE OS ALUNOS QUE OBTIVEREM O NÚMERO DE ACERTOS IGUAL OU SUPERIOR AO DA NOTA DE CORTE, QUE SERÁ DIVULGADO NO SITE da OBB, NO DIA 08/04/2019.</p>
-<p><span><strong>2ª Fase:</strong></span></p>
-<p>SOMENTE os 16 alunos poderão participar da 3ª Fase que ocorrerá no Instituto Butantan: Os 15 primeiros colocados (do primeiro ao décimo quinto na segunda fase) e 01 o(a) estudante do segundo ano melhor classificado(a) após o décimo quinto lugar.</p>
-<p> # Para a participação na capacitação prática (3ª Fase) o aluno deve enviar até a data estabelecida, a documentação comprobatória de matrícula na escola e a documentação pessoal, foto 3 x 4, além de preenchimento de formulário de participação, que será enviado pela coordenação da XV OBB.</p>
-<p><span><strong>3ª Fase:</strong></span></p>
-<p>Quatro alunos (do primeiro ao quarto classificados na 3ª Fase da XV OBB) serão selecionados para representar o Brasil na XXX IBO, que ocorrerá em julho de 2019 na Hungria (ibo2019.org).</p>
-<p>Quatro alunos (do quinto ao oitavo classificados na 3ª Fase da XV OBB) serão selecionados para representar o Brasil na XIII OIAB, que ocorrerá na Bolivia (data a confirmar).</p>
-<p>Dois alunos (do nono ao décimo classificados 3ª Fase da XV OBB) serão escolhidos como suplentes, no caso de algum dos classificados finais não poder participar das olimpíadas internacionais.</p>
-<p>Quanto aos critérios de desempate:</p>
-<p>Os critérios para desempate a serem aplicados em todas as fases da OBB, caso necessário, darão prioridade aos alunos (nesta ordem):</p>
-<p>1º - Estudantes da rede pública;</p>
-<p>2º - Pertencentes a colégios com menos representantes na 3ª Fase;</p>
-<p>3º - Pertencentes a estados com menos representantes 3ª Fase;</p>
-<p>4º - Com menor idade; </p>
-<p>5º - Pertencentes a estados com menor índice IDH.</p></div>
+</li><li class="rss-item"><a href="http://olimpiadasdebiologia.butantan.gov.br/inscricoes-e-regulamentos" class="rss-item">Inscrições</a> <span class="rss-item-auth"></span><br><span class="rss-date"></span><br><div><p id="docs-internal-guid-e3b97f81-7fff-7a70-1a57-f5f6f1d2307b" dir="ltr"><span>Inscrições da escola participante</span></p>
+<p dir="ltr"> </p>
+<p dir="ltr"><span>Observação:</span><span> Caro professor, antes de realizar a inscrição </span><span>LEIA</span> <span>ATENTAMENTE</span><span> o regulamento abaixo:</span></p>
+<p dir="ltr"><span>As inscrições serão realizadas por um </span><span>professor responsável</span><span> de cada escola, mediante a uma cópia digital </span><span>de seu RG e de um documento emitido pela secretaria da escola comprovando o seu vínculo</span><span>. A inscrição será gratuita, no próprio site da </span><span>XVI OBB, com INÍCIO no dia 10 de FEVEREIRO e TÉRMINO no dia 10 de MARÇO de 2020 - (horário de Brasília).</span></p>
+<p dir="ltr"><span>IMPORTANTE:</span></p>
+<p dir="ltr"><span>Cada professor cadastrado deverá acessar a página da XVI OBB, a partir do dia 11/03/2020, para o </span><span>download</span><span> da prova, e somente os professores cadastrados poderão fazê-lo mediante sua senha pessoal (recebida no momento da inscrição). </span><span>A responsabilidade pela guarda e confidencialidade do conteúdo da prova é dos professores cadastrados.</span></p>
+<p dir="ltr"><span>Quanto à participação: </span></p>
+<p dir="ltr"><span>Poderá participar da XVI Olimpíada Brasileira de Biologia (OBB) e na XXXI Olimpíada Internacional de Biologia (IBO) e XIV Ibero-Americana de Biologia (OIAB), caso seja classificado, o aluno regularmente matriculado e cursando o ensino médio até dezembro de 2020 em qualquer escola pública ou privada, </span><span>regularmente</span> <span>cadastradas pelo MEC. </span></p>
+<p dir="ltr"><span>Obs. A desobediência desse critério, como a inscrição de alunos matriculados em “cursinhos”</span> <span>técnicos ou preparatórios, acarretará a aplicação das sanções legais cabíveis, como a desclassificação de todos os alunos inscritos pela escola infratora.</span></p>
+<p dir="ltr"><span>Por determinação da Olimpíada Internacional de Biologia, a idade máxima de participação dos alunos na XVI OBB é de 19 anos (inclusive) no dia 1 de julho de 2020. </span></p>
+<p dir="ltr"><span>Por critério da Olimpíada Ibero-Americana de Biologia, alunos que já tenham participado da IBO não poderão participar da OIAB. Caso haja esta situação, o suplente melhor classificado será convocado para substituí-lo. </span></p>
+<p dir="ltr"><span>Os melhores alunos classificados pela OBB poderão participar uma única vez da OIAB e até duas vezes, participando dos respectivos processos seletivos da OBB, da IBO. </span></p>
+<p dir="ltr"><span>Serão emitidos certificados de participação a todos os alunos, sendo emitido apenas em relação a última etapa da qual o aluno participou, exceto no caso do aluno que participar da Capacitação/Seletiva Internacional, que terá, neste caso, o certificado referente a medalha obtida na 2ª fase e certificado referente à Capacitação/Seletiva Internacional, habilitado ou não para a XXXI Olimpíada Internacional de Biologia (IBO) ou XIV Ibero-Americana de Biologia (OIAB).</span></p>
+<p dir="ltr"><span>O calendário divulgado com o cronograma estará sujeito a alterações.</span></p>
+<p dir="ltr"><span>Quanto ao número de questões, impressão e distribuição no local da prova:</span></p>
+<p dir="ltr"><span><span></span></span><span>  </span><span>1ª Fase:</span></p>
+<p dir="ltr"><span>Data: 13 ou 14/03/2020 (manha ou tarde - sexta-feira ou sábado)</span></p>
+<p dir="ltr"><span>Prova composta por 30 testes de múltipla-escolha abordando todo o conteúdo de biologia contido no link (conteúdo programático) do site da XVI OBB e com duração máxima de 04 horas.</span></p>
+<p dir="ltr"><span>A escola será responsável pela realização das cópias das provas, bem como pela aplicação das mesmas</span><span>, </span><span>devendo manter o sigilo do conteúdo do qual os alunos apenas poderão tomar conhecimento no momento da aplicação das provas, sendo vedada a reprodução ou divulgação do conteúdo, total ou parcialmente, após a realização da prova, por quaisquer meios, físico ou eletrônicos. Oportunamente, a XVI OBB disponibilizará o conteúdo da prova e gabarito, que passarão a ser de domínio público, sempre respeitada a fonte. </span></p>
+<p dir="ltr"><span>A correção será realizada pelos próprios professores. Contudo, </span><span>de forma aleatória, algumas folhas de respostas serão solicitadas via site para conferência de correção pela coordenação nacional da XVI OBB.</span><span> Cabe ao professor e a escola atender a solicitação da OBB, sob pena de desclassificação da escola na XVI OBB. Em caso de constatação de erros, adulterações e fraudes por má fé, todos os alunos vinculados a esse professor serão eliminados e professor/escola responderão civil e criminalmente, além de ficar vedada a participação do aluno/escola cuja prova contiver adulterações ou fraudes em qualquer outra prova da OBB.</span></p>
+<p dir="ltr"><span>Durante o período de aplicação da prova, o aluno deverá ficar incomunicável com os demais alunos e com o exterior e não poderá utilizar nenhum meio de comunicação ou equipamento eletrônico (telefone ou celular, notebook, smartphone, </span><span>tablet</span><span> ou quaisquer similares), vedada a consulta a livros, manuais, notas, impressos de qualquer natureza, etc.</span></p>
+<p dir="ltr"><span>Caso o aluno queira ir ao banheiro, a escola deverá providenciar alguém para acompanha-lo.</span></p>
+<p dir="ltr"><span>A inserção das notas e cadastro dos alunos deve ser realizada pelos professores responsáveis até o dia 23/03/2020.</span></p>
+<p dir="ltr"><span><span></span></span><span> </span><span>2ª Fase: </span><span>    </span></p>
+<p dir="ltr"><span>Data: 05/04/2020 (domingo das 9h às 13h – horário de Brasília)</span></p>
+<p dir="ltr"><span>Prova composta por 100 testes de múltipla-escolha, abordando o mesmo conteúdo programático da 1ª Fase.</span></p>
+<p dir="ltr"><span>As escolas sede serão as responsáveis pela realização das cópias das provas da 2ª Fase, bem como pela aplicação das mesmas, devendo manter o sigilo, bem como estarão sujeitas às penalidades e outras cominações conforme as instruções da 1ª fase. </span></p>
+<p dir="ltr"><span>A coordenação nacional será a responsável pela distribuição da prova e das folhas de respostas para as escolas sede, via site da XVI OBB, conforme tutorial que será enviado para os professores responsáveis de cada escola. </span></p>
+<p dir="ltr"><span>A correção será realizada automaticamente e exclusivamente pela equipe do Instituto Butantan. </span></p>
+<p dir="ltr"><span>Durante o período de aplicação da prova, o aluno deverá ficar incomunicável com os demais alunos e com o exterior e não poderá utilizar nenhum meio de comunicação ou equipamento eletrônico (telefone ou celular, notebook, smartphone, tablet ou quaisquer similares), vedada a consulta a livros, manuais, notas, impressos de qualquer natureza, etc.</span></p>
+<p dir="ltr"><span>Caso o aluno queira ir ao banheiro, a escola deverá providenciar alguém para acompanha-lo.</span></p>
+<p dir="ltr"><span>Qualquer suspeita de aplicação das provas da 1ª Fase ou da 2ª Fase fora da data e horário ou em locais não autorizados pela coordenação da XVI OBB, bem como a utilização de qualquer material pelos alunos, será avaliada pelo Departamento Jurídico do Instituto Butantan e em caso de confirmação o(s) aluno(s)/professor(es) envolvido(s) serão eliminado(s)/descredenciado(s) da XVI e demais edições da Olimpíada Brasileira de Biologia e os responsáveis sujeitos às sanções cabíveis.</span></p>
+<p dir="ltr"><span><span></span></span><span>Seletiva para as Olimpíadas Internacionais</span></p>
+<p dir="ltr"><span>Os alunos classificados para a (Seletiva – Internacional) serão capacitados via atividades práticas por uma equipe composta por pesquisadores e educadores do Instituto Butantan ou convidados pelo mesmo. </span></p>
+<p dir="ltr"><span>Os participantes serão capacitados e avaliados por provas (teórico/prática) compostas por questões de múltipla-escolha elaborada pela equipe Butantan. Esta prova corresponderá a 50% da nota final da Seletiva - Internacional.</span></p>
+<p dir="ltr"><span>Os outros 50% corresponderá à avaliação individual, enquanto nas atividades práticas, seguindo os critérios abaixo:</span></p>
+<p dir="ltr"><span>Compreensão do protocolo; Planejamento do Experimento: Execução do experimento; Eficiência (realização do que foi pedido em um determinado tempo). </span><span>Caberá ao pesquisador responsável pela atividade essa avaliação</span><span>.</span></p>
+<p dir="ltr"><span>Quanto a classificação:</span></p>
+<p dir="ltr"><span><span></span></span><span>  </span><span>1ª Fase:</span></p>
+<p dir="ltr"><span>O caráter dessa prova será classificatório para a 2ª Fase e SOMENTE PODERÃO PARTICIPAR DA 2ª FASE OS ALUNOS QUE OBTIVEREM O NÚMERO DE ACERTOS IGUAL OU SUPERIOR AO DA NOTA DE CORTE, QUE SERÁ DIVULGADO NO SITE da OBB, ATÉ O DIA 30/03/2020. </span></p>
+<p dir="ltr"><span><span></span></span><span> </span><span>2ª Fase:</span></p>
+<p dir="ltr"><span>SOMENTE os 16 alunos poderão participar da Seletiva que ocorrerá no Instituto Butantan: Os 15 primeiros colocados (do primeiro ao décimo quinto na segunda fase) e 01 o(a) estudante do segundo ano melhor classificado(a) após o décimo quinto lugar.</span></p>
+<p dir="ltr"><span># Para a participação na capacitação prática (Seletiva - Internacional) o estudante deve enviar até a data estabelecida, a documentação comprobatória de matrícula na escola e a documentação pessoal, foto 3x4 recente, fundo branco, não sendo permitidos itens que impeçam a visualização perfeita do rosto do aluno, ainda que parcialmente, como gorros, bonés, chapéus, óculos ou outros itens de vestuário que cubram parte do rosto ou da cabeça, com exceção dos trajes religiosos, que, ainda neste caso, não podem impedir a visualização do rosto, além de preenchimento de formulário de participação, que será enviado pela coordenação da XVI OBB.</span></p>
+<p dir="ltr"> </p>
+<p id="docs-internal-guid-8306ad89-7fff-2a5c-2c67-7c02adf0f102" dir="ltr"><span><span></span></span><span> </span><span>Seletiva para as Olimpíadas Internacionais</span></p>
+<p dir="ltr"><span>Quatro alunos (do primeiro ao quarto classificados na Seletiva da XVI OBB) serão selecionados para representar o Brasil na XXXI IBO, que ocorrerá de 03 a 11 de julho de 2020 no Japão (ibo2020.org).</span></p>
+<p dir="ltr"><span>Quatro alunos (do quinto ao oitavo classificados na Seletiva da XVI OBB) serão selecionados para representar o Brasil na XIV OIAB, que ocorrerá na Costa Rica (data a confirmar).</span></p>
+<p dir="ltr"><span>Dois alunos (nono e décimo classificados na Seletiva da XVI OBB) serão escolhidos como suplentes, no caso de desistência dos classificados finais.</span></p>
+<p dir="ltr"><span>Quanto aos critérios de desempate:</span></p>
+<p dir="ltr"><span>Os critérios para desempate a serem aplicados em todas as fases da XVI OBB, caso necessário, darão prioridade aos alunos (nesta ordem):</span></p>
+<p dir="ltr"><span>1º - Estudantes da rede pública;</span></p>
+<p dir="ltr"><span>2º - Pertencentes a colégios com menos representantes na Seletiva;</span></p>
+<p dir="ltr"><span>3º - Pertencentes a estados com menos representantes na Seletiva;</span></p>
+<p dir="ltr"><span>4º - Com menor idade; </span></p>
+<p dir="ltr"><span>5º - Pertencentes a estados com menor índice IDH.</span></p>
+<p dir="ltr"> </p></div>
 </li></li></ul></div><div class="rss-box" id="newsOBL"><p class="rss-title"><a href="http://www.obling.org/">OBL</a></p><ul class="rss-items"><li class="rss-item"><a href="http://www.obling.org/" class="rss-item">Linha do tempo da OBL</a> <span class="rss-item-auth"></span><br><span class="rss-date"></span><br><div id="how">
   <div>
     <div>
