--- a/_includes/news.html
+++ b/_includes/news.html
@@ -251,7 +251,7 @@
               <div>
                 <a href="http://www.obling.org/">Prova</a>
                 <a href="http://www.obling.org/">Gabarito</a>
-                <a href="http://www.obling.org/">Medalhas</a>
+                <a href="https://docs.google.com/spreadsheets/d/1XEytADTJ-xAiefsvbirUJOGdt32oyZa722aYAn5_7Ms/edit?usp=sharing">Resultados</a>
               </div>
             </li>
             <li>
