--- a/_includes/news.html
+++ b/_includes/news.html
@@ -39,7 +39,9 @@
 
 	<div id="target-ParamLabel14713">
 		<div>
-		<p><a href="https://olimpiadasbiologiasistema.butantan.gov.br/MapaClassificadosFase2" target="_blank" rel="noopener"> Classificados - Fase 2 - XVI OBB</a></p>
+		<p><a href="http://olimpiadasdebiologia.butantan.gov.br/assets/arquivos/provas_gabaritos_classificacoes/Prova_fase1_OBB_2020.pdf">Fase 1 da OBB 2020</a></p>
+<p> </p>
+<p><a href="https://olimpiadasbiologiasistema.butantan.gov.br/MapaClassificadosFase2" target="_blank" rel="noopener"> Classificados - Fase 2 - XVI OBB</a></p>
 <p> </p>
 <p><a href="http://olimpiadasdebiologia.butantan.gov.br/assets/arquivos/provas_gabaritos_classificacoes/OBB_2020/XVI%20OBB%20gabarito%20definitivo.pdf" target="_blank" rel="noopener">Gabarito definitivo da XVI OBB</a></p>
 		</div>
